2008-09-03  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* gst/typefind/gsttypefindfunctions.c: (plugin_init):
	Typefind video/mj2 and image/jp2 ISO JPEG2000 mime types.
	Fixes #550638.

2008-09-03  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* gst/subparse/Makefile.am:
	* gst/subparse/gstsubparse.c:
	* gst/subparse/samiparse.c:
	* tests/check/elements/subparse.c:
	  Rework last change, so that we build subparse, but just disable the
	  sami parse functionality, if we're configured to not use xml. In the
	  tests only the sami test is disabled now.

2008-09-02  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Disable subparse when xml is disabled. It woundn't work anyway. Fixes
	  test runs.

2008-09-02  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* po/POTFILES.in:
	  Add some more files with strings for translation.

2008-09-02  Stefan Kost  <ensonic@users.sf.net>

	* gst-libs/gst/tag/gstvorbistag.c:
	* tests/check/libs/tag.c:
	  Use new geo location tags from core. Fixes #481169

2008-09-01  Edward Hervey  <edward.hervey@collabora.co.uk>

	* tests/check/elements/audioresample.c: (setup_audioresample),
	(fail_unless_perfect_stream), (test_perfect_stream_instance),
	(test_discont_stream_instance):
	Now that GstBaseTransform is 'fixed' ... remove cruft from tests.
	Add debugging for coherence.

2008-08-30  Tim-Philipp Müller  <tim.muller at collabora co uk>

	Patch by: Jonathan Matthew  <notverysmart gmail com>

	* gst/typefind/gsttypefindfunctions.c: (plugin_init):
	  Add typefinder for PDF documents (which is nice to have, since it's a
	  common format, but also helps prevent false positives). Fixes #549814.

2008-08-27  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gstplaybin2.c: (selector_blocked), (pad_added_cb),
	(no_more_pads_cb):
	Fix nasty race where multiple decodebins could start pushing data before
	we manage to configure the sinks, resulting in not-linked errors in
	typical RTSP streaming cases.
