@@ -1,3 +1,10 @@
+2008-09-03  Edward Hervey  <edward.hervey@collabora.co.uk>
+
+	* gst-libs/gst/riff/riff-media.c: (gst_riff_create_audio_caps),
+	(gst_riff_create_audio_template_caps):
+	Add Truespeech mapping for RIFF formats (AVI/WAV).
+	Fixes #550656
+
 2008-09-03  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>
 
 	* gst/typefind/gsttypefindfunctions.c: (plugin_init):
